# skill-graph-mcp

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
docs/: ARCHITECTURE.md  SECURITY_AUDIT.md  USER_GUIDE.md  index.html
registry/: cli.py  embedder.py  loader.py
scripts/: embed_skills_v2.py  push_embeddings_v3.py
server/: main.py  session.py
server/graph/: neo4j_client.py  traversal.py
server/models/: edge.py  skill_node.py
server/search/: vector_search.py
skills/: schema.json
viz/: build_html.py  enrich_semantic.py  index_template.html  parse_skills.py
