[project]
name = "skill-graph"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.23.0",
    "tiktoken>=0.7.0",
    "mangum>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "registry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live Neo4j instance and a valid OPENAI_API_KEY",
    "uat: User Acceptance Tests",
    "slow: marks tests that are intentionally slow",
]